--- a/public/publicIndex.html
+++ b/public/publicIndex.html
@@ -35,6 +35,7 @@
       background-color: white;
       border-radius: 5px;
       margin-top: 10px;
+      margin-bottom: 10px;
     }
     .boton {
       margin:20px;
@@ -47,12 +48,12 @@
     <img src="staticos/assets/images/logo.png" alt="PBSTUFF logo">
   </a>
 </nav>
-  <div class="container">
+  <div class="container-fluid">
     <div class="row justify-content-md-center">
-      <div class="col-md-12">
+      <div class="col-md-11">
         <div class="principal">
           <h1>¡Bienvenidos al evento mas autista del año!</h1>
-          <img src="https://i.imgur.com/OnUUbNy.png" width="40%"/>
+          <img src="https://i.imgur.com/OnUUbNy.png" width="30%"/>
           <div class="texto">
             Para ingresar a este antro simplemente entra con tu cuenta de google. Si no tenes cuenta de google
             create una porque ni puta idea si otra cosa funciona. Una vez adentro, para poder participar en la votacion
@@ -62,12 +63,12 @@
           </div>
           <div class="boton">
             <a href='/auth/google'>
-              <img src="https://i.imgur.com/sxDpX65.png" width="20%"/>
+              <img src="https://i.imgur.com/sxDpX65.png" width="15%"/>
             </a>
           </div>
         </div>
       </div>
-      <div class="col-md-12">
+      <div class="col-md-11">
         <div class="footer">
           Punchbang's Stuff 2011 - 2020
         </div>
