Agrego texto para boton

--- a/public/publicIndex.html
+++ b/public/publicIndex.html
@@ -59,7 +59,7 @@
             create una porque ni puta idea si otra cosa funciona. Una vez adentro, para poder participar en la votacion
             vas a tener que esperar que tu cuenta este habilitada. Se van a habilitar las cuentas de gente cuyos cromosomas sean reconocibles
             y esten al tanto del multiverso de las frases
-
+            <br /><br />Para entrar, hace click en el siguiente boton
           </div>
           <div class="boton">
             <a href='/auth/google'>
