--- a/public/publicIndex.html
+++ b/public/publicIndex.html
@@ -45,7 +45,7 @@
   <body> 
 <nav class="navbar navbar-dark bg-dark">
   <a href="/" class="navbar-brand">
-    <img src="staticos/assets/images/logo.png" alt="PBSTUFF logo">
+    <img src="https://i.imgur.com/BgRjhJV.png" alt="Frase de la decada logo" />
   </a>
 </nav>
   <div class="container-fluid">
