--- a/public/publicIndex.html
+++ b/public/publicIndex.html
@@ -82,7 +82,7 @@
               <img src="https://i.imgur.com/nm6LTF6.png" width="90%"/>
             </div>
             <div class="texto">
-              Este año nos quedamos sin la posibilidad de pechear la Copa América ni de contar medallas en los JJOO,
+              Este año nos quedamos sin la posibilidad de pechear la Copa América y de contar medallas en los JJOO,
               pero por suerte este monumento a la oligofrenia no requiere contacto físico. <br /> <br />
               Todas las frases de la pasada década se miden cara a cara en unas eliminatorias que posteriormente
               llevará a las 32 clasificadas a competir por el título en un torneo mundialista.<br /> <br />
