--- a/public/publicIndex.html
+++ b/public/publicIndex.html
@@ -25,20 +25,14 @@
     }
 
     .texto {
+      margin-top:50px;
       text-align: justify;
       text-justify: inter-word;
       font-size: 24px;
-      display: inline-block;
-      width: 40%;
-      border-color: #d3d3d36e;
-      border-left-width: thin;
-      border-left-style: solid;
       padding-left: 40px;
     }
 
     .logo {
-      display: inline-block;
-      width: 40%;
       vertical-align: top;
       margin-right:-60px;
     }
@@ -69,23 +63,19 @@
   <body> 
 <nav class="navbar navbar-dark bg-dark">
   <a href="/" class="navbar-brand">
-    <img src="https://i.imgur.com/BgRjhJV.png" alt="Frase de la decada logo" />
+    <img src="https://i.imgur.com/xZhC1UM.png" height="40px" alt="Frase de la decada logo" />
   </a>
 </nav>
   <div class="container-fluid">
     <div class="row justify-content-md-center">
       <div class="col-md-11">
         <div class="principal">
-          <h1>¡Bienvenidos al evento más autista del año!</h1>
+          <h1>¡Bienvenidos al segundo evento más autista del año!</h1>
           <div class="cont">
             <div class="logo">
-              <img src="https://i.imgur.com/nm6LTF6.png" width="90%"/>
+              <img src="https://i.imgur.com/xZhC1UM.png"/>
             </div>
-            <div class="texto">
-              Este año nos quedamos sin la posibilidad de pechear la Copa América y de contar medallas en los JJOO,
-              pero por suerte este monumento a la oligofrenia no requiere contacto físico. <br /> <br />
-              Todas las frases de la pasada década se miden cara a cara en unas eliminatorias que posteriormente
-              llevará a las 32 clasificadas a competir por el título en un torneo mundialista.<br /> <br />
+            <div class="texto"> 
               Para ingresar a este antro simplemente entrá con tu cuenta de Google. Si no tenés cuenta de Google
               create una porque posiblemente otra cosa no funcione. Una vez adentro, para poder participar en la votación
               vas a tener que esperar a que tu cuenta esté habilitada. <b>Se van a habilitar las cuentas de gente cuyos cromosomas sean reconocibles
