Uso font awesome

--- a/server/index.html
+++ b/server/index.html
@@ -8,7 +8,8 @@
   integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T"
   crossorigin="anonymous"
 />
-<link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
+<script src="https://kit.fontawesome.com/15a6082360.js" crossorigin="anonymous"></script>
+
   </head> 
   <body> 
     <div id="root">
