--- a/public/publicIndex.html
+++ b/public/publicIndex.html
@@ -34,6 +34,7 @@
     .logo {
       vertical-align: top;
       margin-right:-60px;
+      width: 100%;
     }
 
     .footer {
@@ -62,23 +63,23 @@
   <body> 
 <nav class="navbar navbar-dark bg-dark">
   <a href="/" class="navbar-brand">
-    <img src="https://i.imgur.com/xZhC1UM.png" height="40px" alt="Frase de la decada logo" />
+    <img src="https://i.imgur.com/FZUenoK.png" height="40px" alt="Frase de la decada logo" />
   </a>
 </nav>
   <div class="container-fluid">
     <div class="row justify-content-md-center">
       <div class="col-md-11">
         <div class="principal">
-          <h1>¡Bienvenidos al segundo evento más autista del año!</h1>
+          <h1>xD</h1>
           <div class="cont">
             <div class="logo">
-              <img src="https://i.imgur.com/xZhC1UM.png"/>
+              <img src="https://i.imgur.com/FZUenoK.png"/>
             </div>
             <div class="texto"> 
               Para ingresar a este antro simplemente entrá con tu cuenta de Google. Si no tenés cuenta de Google
               create una porque posiblemente otra cosa no funcione. Una vez adentro, para poder participar en la votación
-              vas a tener que esperar a que tu cuenta esté habilitada. <b>Se van a habilitar las cuentas de gente cuyos cromosomas sean reconocibles
-              y esten al tanto del multiverso de las frases</b>
+              vas a tener que esperar a que tu cuenta esté habilitada. <b>Si votaste el año pasado ya está habilitada. Se van a habilitar las cuentas de gente cuyos cromosomas sean reconocibles
+              y esten al tanto del multiverso de las frases</b>.
               <br /><br />
             </div>
           </div>
@@ -92,7 +93,7 @@
       </div>
       <div class="col-md-11">
         <div class="footer">
-          Punchbang's Stuff 2011 - 2020
+          Punchbang's Stuff 2011 - 2021
         </div>
       <div>
     </div>
