--- a/public/publicIndex.html
+++ b/public/publicIndex.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head> 
-    <title>Votacion Frase de la Decada</title> 
+    <title>Votacion Frase del año 2021</title> 
     <link
   rel="stylesheet"
   href="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
